--- a/GamificacaoPessoal/index.html
+++ b/GamificacaoPessoal/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
+    <base href="/app/GamificacaoPessoal/"> <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gamificação DEV</title>
+    <title>Seu App de Gamificação Pessoal</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
     <!-- 'theme-color' meta tag is not fully supported in Firefox and Opera, but is harmless to include. -->
