--- a/GamificacaoPessoal/index.html
+++ b/GamificacaoPessoal/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seu App de Gamificação Pessoal</title>
 
-    <base href="/app/GamificacaoPessoal/">
+    <base href="/app/GamificacaoPessoal/"> 
 
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
@@ -13,7 +13,7 @@
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', function() {
-                navigator.serviceWorker.register('service-worker.js') // Caminho relativo ao base href
+                navigator.serviceWorker.register('service-worker.js') 
                     .then(reg => console.log('Service Worker Registrado!', reg))
                     .catch(err => console.log('Erro ao registrar Service Worker:', err));
             });
