--- a/GamificacaoPessoal/index.html
+++ b/GamificacaoPessoal/index.html
@@ -1,37 +1,185 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seu App de Gamificação Pessoal</title>
-
-    <base href="/app/GamificacaoPessoal/"> 
-
+    <title>Gamificação DEV</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
-
-    <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', function() {
-                navigator.serviceWorker.register('service-worker.js') 
-                    .then(reg => console.log('Service Worker Registrado!', reg))
-                    .catch(err => console.log('Erro ao registrar Service Worker:', err));
-            });
-        }
-    </script>
-
-    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-    <link rel="shortcut icon" href="icons/favicon.ico">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
-    <meta name="theme-color" content="#000000">
-
+    <!-- 'theme-color' meta tag is not fully supported in Firefox and Opera, but is harmless to include. -->
+    <!-- Removed theme-color meta tags due to lack of support in Firefox and Opera -->
+    <link rel="apple-touch-icon" href="icons/icon-192x192.png">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Bem-vindo ao meu App de Gamificação!</h1>
-    <p>Este é o conteúdo principal do seu aplicativo.</p>
+    <header class="fixed-dashboard">
+        <div class="dashboard-metrics">
+            <div class="metric-item">
+                <span class="metric-label">XP Total:</span>
+                <span id="xpTotal" class="metric-value">0 XP</span>
+            </div>
+            <div class="metric-item">
+                <span class="metric-label">Seguidores:</span>
+                <span id="totalFollowers" class="metric-value">0</span>
+            </div>
+            <div class="metric-item star-rating">
+                <span class="metric-label">Reputação:</span>
+                <div id="starRating" class="metric-value">
+                    <span class="star">☆</span>
+                    <span class="star">☆</span>
+                    <span class="star">☆</span>
+                    <span class="star">☆</span>
+                    <span class="star">☆</span>
+                    <span class="star">☆</span>
+                    <span class="star">☆</span>
+                    <span class="star">☆</span>
+                    <span class="star">☆</span>
+                    <span class="star">☆</span>
+                </div>
+            </div>
+            <div class="metric-item">
+                <span class="metric-label">Receita Simulada (Mês):</span>
+                <span id="simulatedRevenue" class="metric-value">R$ 0,00</span>
+            </div>
+            <div class="metric-item">
+                <span class="metric-label">Recompensa Real (Mês):</span>
+                <span id="realReward" class="metric-value">R$ 0,00</span>
+            </div>
+            <div class="metric-item">
+                <span class="metric-label">Custo Mensal (Mês):</span>
+                <span id="monthlyCost" class="metric-value">R$ 600,00</span>
+            </div>
+            <div class="metric-item">
+                <span class="metric-label">Debugs Concluídos:</span>
+                <span id="exercisesCompletedCount" class="metric-value">0</span>
+            </div>
+        </div>
+        <div class="activity-log">
+            <h3>Atividade Recente</h3>
+            <ul id="activityList">
+                <li>Nenhuma atividade recente.</li>
+            </ul>
+        </div>
+    </header>
+
+    <main class="content-below-dashboard">
+        <section class="action-buttons-container">
+            <button id="addLesson" class="action-button primary-button">Concluir Aula de Teoria</button>
+            <button id="resolveDebug" class="action-button secondary-button">Resolver Debug</button>
+        </section>
+
+        <section class="timers-section metrics-card">
+            <div class="timer-study">
+                <h3>Cronômetro de Estudo</h3>
+                <div class="timer-display" id="timerDisplay">00:00:00</div>
+                <div class="timer-controls">
+                    <button id="startTimer" class="control-button">Iniciar</button>
+                    <button id="pauseTimer" class="control-button">Pausar</button>
+                    <button id="resetTimer" class="control-button">Zerar</button>
+                </div>
+            </div>
+
+            <div class="timer-pomodoro">
+                <h3>Pomodoro</h3>
+                <div class="pomodoro-display" id="pomodoroDisplay">25:00</div>
+                <div class="pomodoro-controls">
+                    <button id="startPomodoro" class="control-button primary-button">Iniciar Foco</button>
+                    <button id="pausePomodoro" class="control-button">Pausar</button>
+                    <button id="resetPomodoro" class="control-button">Zerar</button>
+                </div>
+                <div class="pomodoro-config">
+                    <label for="focusTime">Foco (min):</label>
+                    <input type="number" id="focusTime" value="25" min="1">
+                    <label for="breakTime">Descanso (min):</label>
+                    <input type="number" id="breakTime" value="5" min="1">
+                </div>
+            </div>
+        </section>
+
+        <section class="metrics-card">
+            <h3>Exercícios por Semana</h3>
+            <div class="table-container">
+                <table id="exercisesTable">
+                    <thead>
+                        <tr>
+                            <th>Semana</th>
+                            <th>Qtd. Exercícios</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+        <section class="project-management metrics-card">
+            <h3>Gerenciamento de Projetos</h3>
+            <div class="create-project">
+                <input type="text" id="newProjectName" placeholder="Nome do novo projeto">
+                <button id="createNewProject" class="primary-button">Criar Projeto</button>
+            </div>
+            <h4>Projetos Ativos:</h4>
+            <div id="activeProjectsContainer" class="active-projects-list">
+                <p class="no-projects-message">Nenhum projeto ativo.</p>
+            </div>
+            <button id="viewCompletedProjects" class="secondary-button">Ver Projetos Concluídos</button>
+        </section>
+
+        <section class="daily-journal metrics-card">
+            <h3>Diário de Bordo</h3>
+            <button id="openDailyJournal" class="primary-button">Abrir Diário</button>
+            <p class="journal-tip">Registre suas reflexões, aprendizados e desafios diários.</p>
+        </section>
+
+        <section class="full-activity-history metrics-card">
+            <h3>Histórico Completo de Atividades</h3>
+            <ul id="activityHistoryList" class="activity-history-scroll-area">
+            </ul>
+        </section>
+
+        <section class="reset-data-section">
+            <button id="resetData" class="danger-button">Reiniciar Todos os Dados</button>
+        </section>
+    </main>
+
+    <div id="journalModal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h2>Diário de Bordo</h2>
+            <label for="journalTitle">Título da Entrada:</label>
+            <input type="text" id="journalTitle" placeholder="Ex: Aprendizados do Dia 1">
+            <label for="journalEntry">Anotações:</label>
+            <textarea id="journalEntry" placeholder="Escreva sua entrada diária aqui..."></textarea>
+            <button id="saveJournalEntry" class="primary-button">Salvar Entrada</button>
+            <ul id="journalEntriesList" class="journal-entries-list">
+            </ul>
+        </div>
+    </div>
+
+    <div id="completedProjectsModal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h2>Projetos Concluídos</h2>
+            <ul id="completedProjectsList" class="completed-projects-list">
+            </ul>
+        </div>
+    </div>
+
+    <div id="lessonModal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h2>Detalhes da Aula Teórica</h2>
+            <label for="lessonTitle">Título da Aula:</label>
+            <input type="text" id="lessonTitle" placeholder="Ex: Introdução ao JavaScript">
+            <label for="lessonNotes">Anotações:</label>
+            <textarea id="lessonNotes" placeholder="Suas anotações sobre a aula..."></textarea>
+            <button id="saveLessonDetails" class="primary-button">Salvar e Concluir Aula</button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
+
 </html>
