Remover tag <base href> para corrigir problemas de caminho no GitHub Pages e adicionar seção de frases motivacionais diárias

--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamificação DEV</title>
 
-    <!-- REMOVIDA A TAG <base href> - Ela estava causando problemas de caminho no GitHub Pages para repositórios de projeto.
-         Agora, todos os caminhos relativos (como style.css, manifest.json, icons/, script.js)
-         serão resolvidos corretamente em relação ao diretório raiz do seu repositório 'app' no GitHub Pages. -->
-
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
 
@@ -83,6 +79,10 @@
             <ul id="activityList">
                 <li>Nenhuma atividade recente.</li>
             </ul>
+        </div>
+        <div class="activity-log motivational-phrase-log">
+            <h3>Inspiração Diária</h3>
+            <p id="dailyMotivationalPhrase" class="motivational-phrase">Carregando frase...</p>
         </div>
     </header>
 
