--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', function () {
-                navigator.serviceWorker.register('service-worker.js')
+                // Alteração aqui: registra o Service Worker com um caminho absoluto
+                // Isso é importante se o seu site estiver em uma subpasta do GitHub Pages, como /app/
+                // O caminho deve ser relativo à raiz do domínio do GitHub Pages, ou seja, /nome_do_repositorio/service-worker.js
+                // No seu caso, se o repositório for 'app', fica '/app/service-worker.js'
+                navigator.serviceWorker.register('/app/service-worker.js') // <-- Caminho ajustado
                     .then(reg => console.log('Service Worker Registrado!', reg))
                     .catch(err => console.log('Erro ao registrar Service Worker:', err));
             });
