Adicionar detalhes sobre o projeto DevQuest PWA e a equipe Cache Crusaders na descrição do projeto

--- a/index.html
+++ b/index.html
@@ -244,7 +244,17 @@
             construir uma PWA robusta, que ofereça uma experiência de usuário fluida e confiável, tanto online quanto offline.
             Embora alguns ajustes, como a orientação da tela, possam exigir futuras investigações devido à variabilidade de
             comportamento entre dispositivos, a fundação sólida da "Gamificação DEV" como uma PWA está firmemente estabelecida,
-            pronta para evoluir e engajar a comunidade dedesenvolvedores.</p><br>
+            pronta para evoluir e engajar a comunidade dedesenvolvedores.<br><br>Nome do Trabalho (Projeto): DevQuest PWA
+            
+            Por que: "DevQuest" combina perfeitamente o universo dos desenvolvedores com o conceito de aventura e objetivos da
+            gamificação. E "PWA" deixa claro a tecnologia central e o diferencial do aplicativo, que agora está funcional e pronto
+            para uso.
+            Nome da Equipe: Cache Crusaders
+            
+            Por que: Essa escolha é um reconhecimento direto aos desafios que enfrentamos e superamos com o Service Worker e o
+            cache. "Crusaders" (Cruzados) evoca a ideia de uma equipe determinada que batalha e vence obstáculos técnicos. É um nome
+            divertido e que celebra a persistência de vocês na depuração e solução dos problemas!
+            Espero que gostem! Parabéns mais uma vez por todo o esforço e pelo excelente resultado final!<br></p>
         </section>
 
         <section class="reset-data-section">
