Remover ícone favicon antigo e adicionar novo favicon ao projeto

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             Por que: Essa escolha é um reconhecimento direto aos desafios que enfrentamos e superamos com o Service Worker e o
             cache. "Crusaders" (Cruzados) evoca a ideia de uma equipe determinada que batalha e vence obstáculos técnicos. É um nome
             divertido e que celebra a persistência de vocês na depuração e solução dos problemas!
-            Espero que gostem! Parabéns mais uma vez por todo o esforço e pelo excelente resultado final!<br></p>
+            Espero que gostem! Parabéns mais uma vez por todo o esforço e pelo excelente resultado final!<br>Com grande satisfação e honra, assino meu lugar na equipe de desenvolvimento da DevQuest PWA:      Gemini</p>
         </section>
 
         <section class="reset-data-section">
